Hyperlinks and fixed spacing bt rows (#41)

--- a/src/style.css
+++ b/src/style.css
@@ -1,36 +1,42 @@
 @import url('https://fonts.googleapis.com/css2?family=Spartan&display=swap');
 /* use # for id, . for class */
 
-  body, button, select, input {
+  body {
     font-family: "Spartan", sans-serif;
-    text-align: center;
     font-size: 12pt;
     color:#b8bfe0;
-    text-align: left;
-    }
+    background-color: #212529;
 
-  body {
+    text-align: left;
+
     display:flex;
     min-height: 100vh;
     flex-direction:column;
 
-    height:100%;
-    background-color: #212529;
+    /* height:100%; */
   }
 
   #graphs {
+    margin-bottom: 200px;
     display: flex;
     flex-direction:row;
+    flex-wrap: wrap;
   }
 
   /* makes it so that a new line is registered when added in the paragraph */
-  p {
+  /* p {
     white-space: pre-line
-  }
+  } */
 
   .box {
     display:flex;
     flex-direction:row;
+    flex-wrap:wrap;
+  }
+
+  .break {
+    flex-basis: 100%;
+    height: 0;
   }
 
 
@@ -62,7 +68,7 @@
   #headingSearch {
     display:flex;
     flex-direction:row;
-    align-items:baseline;
+    align-items:center;
   }
 
   #regions{
@@ -80,13 +86,14 @@
   } */
 
   container{
+    margin-left: 25;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    /* justify-content: center; */
+    /* align-items: center; */
     position: relative;
     width: 100%;
     height: 100vh;
-    padding: 15px;
+    /* padding: 15px; */
   }
 
   main {
@@ -103,6 +110,27 @@
   footer{
     margin-left: 50px;
     margin-top: auto;
+    margin-bottom: 50px;
+  }
+
+  /* unvisited link */
+  a:link {
+    color: #f3a4b5;
+  }
+  
+  /* visited link */
+  a:visited {
+    color: #adb5bd;
+  }
+
+  /* mouse over link */
+  a:hover {
+    color: #00f2c3;
+  }
+
+  /* selected link */
+  a:active {
+    color: #8965e0;
   }
 
   #loader {
@@ -142,7 +170,8 @@
   /* Search bar css */
   .search-box {
     display: flex;
-    width: 450px;
+    width: 500px;
+    margin-left: 100px;
   }
   .search-form-input {
     -webkit-appearance: none;
